--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</a>
 				<ul class="nav-items">
 					<li class="nav-item"><a href="#" class="link">Студия</a></li>
-					<li class="nav-item"><a href="#" class="link">Клиенты</a></li>
+					<li class="nav-item"><a href="#clients" class="link">Клиенты</a></li>
 					<li class="nav-item"><a href="#" class="link">Магазин</a></li>
-					<li class="nav-item"><a href="#" class="link">Контакты</a></li>
+					<li class="nav-item"><a href="#contacts" class="link">Контакты</a></li>
 				</ul>
 				<ul class="nav-user-items">
 					<li class="nav-user-item"><a href="#" class="link basket">Корзина</a></li>
@@ -79,10 +79,60 @@
 			</section>
 			<hr>
 			<section class="about-us">
-				<h3 class="about-us-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h3>
-				<p class="about-us-desc">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<div class="about-us-left-column">
+					<h3 class="about-us-title">Мы - маленькая, но гордая дизайн-студия из Краснодара.</h3>
+					<p class="about-us-desc">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+					<h4 class="orders-title">Выполняем заказы на разработку:</h4>
+					<ul class="orders-list">
+						<li class="order-item">Веб-сайтов любой сложности</li>
+						<li class="order-item">Мобильных приложений для iOS и Android</li>
+						<li class="order-item">Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
+				</div>
+				<div class="about-us-right-column">
+					<img src="img/nerds-illustration.jpg" alt="nerds" width="360" height="208">
+					<table class="percentage">
+						<caption>с 2004 года Любим точность во всем:</caption>
+						<tr>
+							<td>146<sup>%</sup></td>
+							<td>100<sup>%</sup></td>
+							<td>50<sup>%</sup></td>
+						</tr>
+						<tr>
+							<th>Уровень самоотдачи</th>
+							<th>Соблюдение сроков</th>
+							<th>Минимальная предоплата</th>
+						</tr>
+					</table>
+				</div>
+			</section>
+			<section id="clients" class="clients">
+				<a class="client-item" href="https://htmlacademy.ru"><img src="img/logo-1.png" alt="html academy" width="199" height="68"></a>
+				<div class="line"></div>
+				<a class="client-item" href="https://raccoonroman.github.io/barbershop/"><img src="img/logo-2.png" alt="barbershop borodinski" width="209" height="90"></a>
+				<div class="line"></div>
+				<a class="client-item" href="#"><img src="img/logo-3.png" alt="pink" width="185" height="52"></a>
+				<div class="line"></div>
+				<a class="client-item" href="#"><img src="img/logo-4.png" alt="mishka" width="173" height="84"></a>
 			</section>
 		</div>
+		<section id="contacts" class="contacts">
+			<h2 class="visually-hidden">Контакты</h2>
+			<div class="container">
+				<section class="contacts-info">
+					<h3>NЁRDS DESIGN STUDIO</h3>
+					<p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+					<p>тел. +7 (812) 275-75-75s</p>
+					<a href="#" class="btn">Напишите нам</a>
+				</section>
+			</div>
+			<section class="map">
+				<h3 class="visually-hidden">Карта</h3>
+				 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2sua!4v1525709542822" height="416" allowfullscreen></iframe>
+				<img src="img/map-marker.jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="1725" height="416">
+			</section>
+
+		</section>
 	</main>
 	<script src="js/script.js"></script>
 </body>
