add page shop(filter)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<ul class="nav-items">
 					<li class="nav-item"><a href="#" class="link">Студия</a></li>
 					<li class="nav-item"><a href="#clients" class="link">Клиенты</a></li>
-					<li class="nav-item"><a href="#" class="link">Магазин</a></li>
+					<li class="nav-item"><a href="shop.html" class="link">Магазин</a></li>
 					<li class="nav-item"><a href="#contacts" class="link">Контакты</a></li>
 				</ul>
 				<ul class="nav-user-items">
@@ -107,6 +107,7 @@
 				</div>
 			</section>
 			<section id="clients" class="clients">
+				<h2 class="visually-hidden">Клиенты</h2>
 				<a class="client-item" href="https://htmlacademy.ru"><img src="img/logo-1.png" alt="html academy" width="199" height="68"></a>
 				<div class="line"></div>
 				<a class="client-item" href="https://raccoonroman.github.io/barbershop/"><img src="img/logo-2.png" alt="barbershop borodinski" width="209" height="90"></a>
@@ -151,7 +152,7 @@
 				<label for="feedback-content-field">Текст письма:</label>
 				<textarea id="feedback-content-field" placeholder="В свободной форме" name="feedback-content-field"></textarea>
 			</div>
-			<button class="btn" type="submit">Отправить</button>
+			<button class="btn">Отправить</button>
 		</form>
 	</section>
 	<div class="modal-overlay"></div>
