--- a/shop.html
+++ b/shop.html
@@ -93,7 +93,18 @@
 					<button class="filter-btn">Показать</button>
 				</form>
 			</section>
-			<section class="templates"></section>
+			<section class="templates">
+				<div class="filter-sort">
+					<p>Сортировать:</p>
+					<ul>
+						<li><a href="#" class="active">По цене</a></li>
+						<li><a href="#">По типу</a></li>
+						<li><a href="#">По названию</a></li>
+						<li><a href="#" class="arrow arrow-bottom active">по убыванию</a></li>
+						<li><a href="#" class="arrow arrow-top">по возрастанию</a></li>
+					</ul>
+				</div>
+			</section>
 		</div>
 	</div>
 </main>
