--- a/shop.html
+++ b/shop.html
@@ -104,6 +104,104 @@
 						<li><a href="#" class="arrow arrow-top">по возрастанию</a></li>
 					</ul>
 				</div>
+				<h2 class="visually-hidden">Шаблоны</h2>
+				<ul class="template-list">
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-sedona.jpg" alt="Сайт Sedona" width="360" height="576">
+							<figcaption>
+								<h3>Sedona</h3>
+								<p>Информационный сайт для туристов</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-pink.jpg" alt="Сайт Pink App" width="360" height="576">
+							<figcaption>
+								<h3>Pink App</h3>
+								<p>Продуктовый лендинг приложения для iOS и Android</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-barbershop.jpg" alt="Сайт Barbershop" width="360" height="576">
+							<figcaption>
+								<h3>Barbershop</h3>
+								<p>Сайт салона красоты.<br>Для мужчин, да.</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-mishka.jpg" alt="Сайт MISHKA" width="360" height="576">
+							<figcaption>
+								<h3>MISHKA</h3>
+								<p>Интернет-магазин вязаных игрушек</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-aplus.jpg" alt="Сайт A Plus" width="360" height="576">
+							<figcaption>
+								<h3>A Plus</h3>
+								<p>Лендинг курсов повышения квалификации</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="template-item">
+						<figure>
+							<div class="substrate">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+							<img src="img/img-kvast.jpg" alt="Сайт КВАСТ" width="360" height="576">
+							<figcaption>
+								<h3>КВАСТ</h3>
+								<p>Промо-сайт производителя крафтового кваса</p>
+								<button class="btn" type="button">9 900 руб.</button>
+							</figcaption>
+						</figure>
+					</li>
+				</ul>
 			</section>
 		</div>
 	</div>
