--- a/shop.html
+++ b/shop.html
@@ -202,9 +202,77 @@
 						</figure>
 					</li>
 				</ul>
+
+				<ul class="pagination-list">
+					<li class="pagination-item"><a class="active">1</a></li>
+					<li class="pagination-item"><a href="#">2</a></li>
+					<li class="pagination-item"><a href="#">3</a></li>
+					<li class="pagination-item"><a href="#">следующая</a></li>
+				</ul>
 			</section>
 		</div>
+
+		<section id="contacts" class="contacts">
+			<h2 class="visually-hidden">Контакты</h2>
+			<section class="contacts-info">
+				<h3>NЁRDS DESIGN STUDIO</h3>
+				<p class="address">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+				<p class="tel">тел. +7 (812) 275-75-75</p>
+				<button class="btn btn-feedback" type="button">Напишите нам</button>
+			</section>
+		</section>
 	</div>
+
+	<section class="map">
+		<h3 class="visually-hidden">Карта</h3>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2sua!4v1525709542822" height="416" allowfullscreen></iframe>
+		<img src="img/map-marker.jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="1725" height="416">
+	</section>
+
+	<section class="modal-feedback">
+		<h3 class="modal-feedback-title">Напишите нам</h3>
+		<button class="modal-close" type="button" aria-label="Закрыть окно"></button>
+		<form class="form-feedback" action="https://echo.htmlacademy.ru" method="post" target="_blank">
+			<div class="form-wrapper">
+				<div class="feedback-item">
+					<label for="feedback-name-field">Ваше имя:</label>
+					<input id="feedback-name-field" placeholder="Имя Фамилия" type="text" name="feedback-name-field">
+				</div>
+				<div class="feedback-item">
+					<label for="feedback-email-field">Ваш e-mail:</label>
+					<input id="feedback-email-field" placeholder="email@example.com" type="email" name="feedback-email-field">
+				</div>
+			</div>
+			<div class="feedback-item">
+				<label for="feedback-content-field">Текст письма:</label>
+				<textarea id="feedback-content-field" placeholder="В свободной форме" name="feedback-content-field"></textarea>
+			</div>
+			<button class="btn">Отправить</button>
+		</form>
+	</section>
+	<div class="modal-overlay"></div>
 </main>
+
+<footer class="page-footer">
+	<div class="container">
+		<div class="footer-social">
+			<a class="social-link social-link-vk" href="https://vk.com/htmlacademy" target="_blank" aria-label="ВКонтакте">
+				<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
+			</a>
+			<a class="social-link social-link-fb" href="https://facebook.com/htmlacademy" target="_blank" aria-label="Facebook">
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22"><path fill="#FFF" d="M12 4V0H8C5.791 0 4 1.791 4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+			</a>
+			<a class="social-link social-link-in" href="https://instagram.com/htmlacademy" target="_blank" aria-label="Instagram">
+				<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181C4.067 9.482 4 9.983 4 10.5c0 3.59 2.91 6.5 6.5 6.5s6.5-2.91 6.5-6.5c0-.517-.066-1.018-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+			</a>
+		</div>
+		<div class="collaboration">
+			<b>Давайте дружить, это выгодно!</b>
+			<p>Скидка 10% для друзей из социальных сетей.</p>
+		</div>
+	</div>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
