--- a/shop.html
+++ b/shop.html
@@ -223,11 +223,11 @@
 		</section>
 	</div>
 
-	<section class="map">
-		<h3 class="visually-hidden">Карта</h3>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2sua!4v1525709542822" height="416" allowfullscreen></iframe>
-		<img src="img/map-marker.jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="1725" height="416">
-	</section>
+	<section class="map-container">
+			<h3 class="visually-hidden">Карта</h3>
+			<div id="map" class="map"></div>
+			<img src="img/map-marker.jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург" width="1725" height="416">
+		</section>
 
 	<section class="modal-feedback">
 		<h3 class="modal-feedback-title">Напишите нам</h3>
@@ -273,6 +273,7 @@
 	</div>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="js/script-min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 </body>
 </html>
